--- a/index.html
+++ b/index.html
@@ -646,16 +646,11 @@ background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, F
   </p>
 <div style="text-align: center;">
   <div class="actions">
-      <a class="read" id="closeButton">
-      关闭
-    </a>
-    <a class="read" id="closeButton">
-      我知道了
+	  
+      <a class="read" href="http://a.thesheep.lovestoblog.com/">
+      立即访问
     </a>
 
-    <a class="mark-as-read" id="dismissButton">
-      24小时内不再弹出
-    </a>
   </div>
   </div>
 </div>
