--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheSheep的博客</title>
+    <title>TheSheep的博客 GITHUB</title>
     <meta name='description' content='一个极致的极简风博客，文章字数也少得可怜...'>
     <link rel="icon" href="https://creatorspace.imgix.net/users/cm5tl7a7y01jfre014pvpcgx1/phcNVZWIBk4tWtqg-thssheep.jpg" type="image/png">
     <style>
